--- a/about.html
+++ b/about.html
@@ -17,7 +17,12 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
+<p1>Junxia Zhuge</p1>
+<p2>Education Experience</p2>
 
+<p2>Work Experience</p2>
+
+<p2>Skill</p2>
 </div>
 
 <!-- Handle Language Change -->
