--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@ header-img: "img/about-bg.jpg"
 
 <!-- Language Selector -->
 <select onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0"> 中文 Chinese </option>
-    <option value="1" selected> 英语 English </option>
+    <option value="0" selected>English</option>
+    <option value="1">中文</option>
 </select>
 
 <!-- Chinese Version -->
@@ -17,12 +17,12 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-<p1>Junxia Zhuge</p1>
-<p2>Education Experience</p2>
+<h1 align="center">Junxia Zhuge</h1>
+<h2>Education Experience</h2>
 
-<p2>Work Experience</p2>
+<h2>Work Experience</h2>
 
-<p2>Skill</p2>
+<h2>Skill</h2>
 </div>
 
 <!-- Handle Language Change -->
@@ -30,7 +30,7 @@ header-img: "img/about-bg.jpg"
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
     function onLanChange(index){
-        if(index == 0){
+        if(index == 1){
             $zh.style.display = "block";
             $en.style.display = "none";
         }else{
