--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/about-bg.jpg"
 </div>
 
 <!-- English Version -->
-<div class="en post-container" font-family:"Times New Roman", Times, serif>
+<div class="en post-container">
 <h1 align="center" font-family:"Times New Roman", Times, serif>Junxia Zhuge</h1>
 <h2>Education Experience</h2>
 
