--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/about-bg.jpg"
 </div>
 
 <!-- English Version -->
-<div class="en post-container">
+<div class="en post-container" style="font-family:"Times New Roman", Times, serif;">
 <h1 align="center" font-family:"Times New Roman", Times, serif>Junxia Zhuge</h1>
 <h2>Education Experience</h2>
 
