--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container" style="font-family:"Times New Roman", Times, serif;">
-<h1 align="center" font-family:"Times New Roman", Times, serif>Junxia Zhuge</h1>
+<h1 align="center" style="font-family:"Times New Roman", Times, serif;">Junxia Zhuge</h1>
 <h2>Education Experience</h2>
 
 <h2 font-family:"Times New Roman", Times, serif>Work Experience</h2>
