--- a/about.html
+++ b/about.html
@@ -16,13 +16,13 @@ header-img: "img/about-bg.jpg"
 </div>
 
 <!-- English Version -->
-<div class="en post-container" style="font-family:"Times New Roman", Times, serif;">
-<h1 align="center" style="font-family:"Times New Roman", Times, serif;">Junxia Zhuge</h1>
+<div class="en post-container" style="font-family: Times New Roman;">
+<h1 align="center">Junxia Zhuge</h1>
 <h2>Education Experience</h2>
 
-<h2 font-family:"Times New Roman", Times, serif>Work Experience</h2>
+<h2>Work Experience</h2>
 
-<h2 font-family:"Times New Roman", Times, serif>Skill</h2>
+<h2>Skill</h2>
 </div>
 
 <!-- Handle Language Change -->
