--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ header-img: "img/about-bg.jpg"
 ---
 
 <!-- Language Selector -->
+<div style="height:20px;"></div>
 <div class="btn-group" role="group" aria-label="language selector">
     <button class="btn btn-default" type="button" id="bt1" style="font-family: Arial;">English</button>
     <button class="btn btn-default" type="button" id="bt2" style="font-family: Arial;">中文</button>
