--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: "About"
 header-img: "img/about-bg.jpg"
 ---
@@ -19,12 +19,26 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-<h1 align="center" style="font-family: Times New Roman;">Junxia Zhuge</h1>
-<h2 style="font-family: Times New Roman;">Education Experience</h2>
-
-<h2 style="font-family: Times New Roman;">Work Experience</h2>
-
-<h2 style="font-family: Times New Roman;">Skill</h2>
+<h2 align="center" style="font-family: Times New Roman;">Junxia Zhuge</h2>
+<h4 style="font-family: Times New Roman;">Education Experience</h4>
+<table style="width:100%">
+  <tr>
+    <td><i>Zhejiang University</i></td>
+    <td><i>2011.9-2015.6</i></td>
+  </tr>
+  <tr>
+    <td><i>University of California, San Diego</i></td>
+    <td><i>2015.9-now</i></td>
+  </tr>
+</table>
+<h4 style="font-family: Times New Roman;">Work Experience</h4>
+<table style="width:100%">
+  <tr>
+    <td><i>Microsoft Research Asia</i></td>
+    <td><i>2015.5-2015.9</i></td>
+  </tr>
+</table>
+<h4 style="font-family: Times New Roman;">Skill</h4>
 <div style="height:20px;"></div>
 </div>
 
