--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ header-img: "img/about-bg.jpg"
 <!-- Language Selector -->
 <div style="height:20px;"></div>
 <div class="btn-group" role="group" aria-label="language selector">
-    <button class="btn btn-default" type="button" id="bt1" style="font-family: Arial;">English</button>
+    <button class="btn btn-default" type="button" id="bt1" style="font-family: Arial;" checked="checked">English</button>
     <button class="btn btn-default" type="button" id="bt2" style="font-family: Arial;">中文</button>
 </div>
 
@@ -24,11 +24,11 @@ header-img: "img/about-bg.jpg"
 <table style="width:100%">
   <tr>
     <td><i>Zhejiang University</i></td>
-    <td><i>2011.9-2015.6</i></td>
+    <td><i>September 2011 - June 2015</i></td>
   </tr>
   <tr>
     <td><i>University of California, San Diego</i></td>
-    <td><i>2015.9-now</i></td>
+    <td><i>September 2015 - now</i></td>
   </tr>
 </table>
 <h4 style="font-family: Times New Roman;">Work Experience</h4>
@@ -37,8 +37,18 @@ header-img: "img/about-bg.jpg"
     <td><i>Microsoft Research Asia</i></td>
     <td><i>2015.5-2015.9</i></td>
   </tr>
+  <tr>
+    <td><i>Snapchat Inc.</i></td>
+    <td><i>This Summer</i></td>
+  </tr>
 </table>
 <h4 style="font-family: Times New Roman;">Skill</h4>
+<span class="label label-primary">C/C++</span>
+<span class="label label-primary">Python</span>
+<span class="label label-primary">Java</span>
+<span class="label label-primary">Matlab</span>
+<span class="label label-primary">DirectX</span>
+<span class="label label-primary">Latex</span>
 <div style="height:20px;"></div>
 </div>
 
