--- a/about.html
+++ b/about.html
@@ -43,6 +43,14 @@ header-img: "img/about-bg.jpg"
   </tr>
 </table>
 <h4 style="font-family: Times New Roman;">Skill</h4>
+
+
+<div class="tags">
+<span>C/C++</span>
+</div>
+
+
+
 <span class="label label-primary">C/C++</span>
 <span class="label label-primary">Python</span>
 <span class="label label-primary">Java</span>
