--- a/about.html
+++ b/about.html
@@ -19,38 +19,18 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-<h2 align="center" style="font-family: Times New Roman;">Junxia Zhuge</h2>
-<h4 style="font-family: Times New Roman;">Education Experience</h4>
-<table style="width:100%">
-  <tr>
-    <td><i>Zhejiang University</i></td>
-    <td><i>Sep 2011 - Jun 2015</i></td>
-  </tr>
-  <tr>
-    <td><i>University of California, San Diego</i></td>
-    <td><i>Sep 2015 - now</i></td>
-  </tr>
-</table>
-<h4 style="font-family: Times New Roman;">Work Experience</h4>
-<table style="width:100%">
-  <tr>
-    <td><i>Microsoft Research Asia</i></td>
-    <td><i>May 2015 -Sep 2015</i></td>
-  </tr>
-  <tr>
-    <td><i>Snapchat Inc.</i></td>
-    <td><i>This Summer</i></td>
-  </tr>
-</table>
+<p style="font-family: Times New Roman;">
+I majored in Math & Applied Math during undergraduate study. 
+After graduate from Zhejiang University, I spent 3 months as a research intern at Microsoft Research Asia.
+My primary work at MSRA is computer game video compressing based on APIs.
+Now, I am a graduate student from UCSanDiego major in Computer Science.
+</p>
+</div>
+
 <h4 style="font-family: Times New Roman;">Skill</h4>
-
-
 <div class="tags">
 <span>C/C++</span>
 </div>
-
-
-
 <span class="label label-primary">C/C++</span>
 <span class="label label-primary">Python</span>
 <span class="label label-primary">Java</span>
@@ -58,7 +38,6 @@ header-img: "img/about-bg.jpg"
 <span class="label label-primary">DirectX</span>
 <span class="label label-primary">Latex</span>
 <div style="height:20px;"></div>
-</div>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
