--- a/about.html
+++ b/about.html
@@ -27,16 +27,13 @@ Now, I am a graduate student from UCSanDiego major in Computer Science.
 </p>
 </div>
 
-<h4 style="font-family: Times New Roman;">Skill</h4>
-<div class="tags">
-<span>C/C++</span>
-</div>
-<span class="label label-primary">C/C++</span>
-<span class="label label-primary">Python</span>
-<span class="label label-primary">Java</span>
-<span class="label label-primary">Matlab</span>
-<span class="label label-primary">DirectX</span>
-<span class="label label-primary">Latex</span>
+<h4 style="font-family: Times New Roman;" align="justify">Skill</h4>
+<span class="badge">C/C++</span>
+<span class="badge">Python</span>
+<span class="badge">Java</span>
+<span class="badge">Matlab</span>
+<span class="badge">DirectX</span>
+<span class="badge">Latex</span>
 <div style="height:20px;"></div>
 
 <!-- Handle Language Change -->
