--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-<p style="font-family: Times New Roman;">
+<p style="font-family: Times New Roman;" align="justify">
 I majored in Math & Applied Math during undergraduate study. 
 After graduate from Zhejiang University, I spent 3 months as a research intern at Microsoft Research Asia.
 My primary work at MSRA is computer game video compressing based on APIs.
