--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@ header-img: "img/about-bg.jpg"
 <p style="font-family: Times New Roman;" align="justify">
 I majored in Math & Applied Math during my undergraduate study. 
 After graduate from <a href="http://www.zju.edu.cn/">Zhejiang University</a>, 
-I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a>, System Group.
+I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a> System Group.
 My primary work at <a href="http://msra.cn/zh-cn/">MSRA</a> is computer game video compressing based on APIs.
 Now, I am a graduate student from <a href="http://ucsd.edu/">UCSanDiego</a> major in Computer Science.
 This summer, I will be an engineer intern at <a href="https://www.snapchat.com/">Snapchat</a>.
 </p>
 </div>
 
-<h4 style="font-family: Times New Roman;" align="justify">Skill</h4>
+<h4 style="font-family: Times New Roman;" align="justify">Skills</h4>
 <span class="badge">C/C++</span>
 <span class="badge">Python</span>
 <span class="badge">Java</span>
