--- a/about.html
+++ b/about.html
@@ -6,9 +6,10 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-<p style="font-family: Times New Roman;" align="justify">
+<p style="font-family: Georgia, serif;" align="justify">
+Hey there! This is Junxia. You can also call me Xavier.
 I majored in Math & Applied Math during my undergraduate study. 
-After graduate from <a href="http://www.zju.edu.cn/">Zhejiang University</a>, 
+After graduating from <a href="http://www.zju.edu.cn/">Zhejiang University</a>, 
 I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a> System Group.
 My primary work at <a href="http://msra.cn/zh-cn/">MSRA</a> is computer game video compressing based on APIs.
 Now, I am a graduate student from <a href="http://ucsd.edu/">UCSanDiego</a> major in Computer Science.
