--- a/about.html
+++ b/about.html
@@ -4,16 +4,15 @@ layout: page
 header-img: "img/about-bg.jpg"
 ---
 
-<!-- English Version -->
 <div class="en post-container">
 <p style="font-family: Georgia, serif;" align="justify">
 Hey there! This is Junxia. You can also call me Xavier.
 I majored in Math & Applied Math during my undergraduate study. 
-After graduating from <a href="http://www.zju.edu.cn/">Zhejiang University</a>, 
+After graduating from <a href="http://www.zju.edu.cn/">Zhejiang University</a> in June 2015, 
 I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a> System Group.
-My primary work at <a href="http://msra.cn/zh-cn/">MSRA</a> is computer game video compressing based on APIs.
-Now, I am a graduate student from <a href="http://ucsd.edu/">UCSanDiego</a> major in Computer Science.
-This summer, I will be an engineer intern at <a href="https://www.snapchat.com/">Snapchat</a>.
+My primary work at <a href="http://msra.cn/zh-cn/">MSRA</a> was to research computer game video compression method based on APIs.
+Currently, I am a graduate student at <a href="http://ucsd.edu/">UCSanDiego</a> major in Computer Science, machine learning track.
+This summer, I will be an engineer intern at <a href="https://www.snapchat.com/">Snapchat</a>. I expect to graduate in December 2016.
 </p>
 </div>
 
