--- a/about.html
+++ b/about.html
@@ -5,9 +5,11 @@ header-img: "img/about-bg.jpg"
 ---
 
 <div class="en post-container">
+<blockquote><p>Knock knock...</p></blockquote> 
+
 <p style="font-family: Georgia, serif;" align="justify">
 Hey there! This is Junxia. You can also call me Xavier.
-I majored in Math & Applied Math during my undergraduate study. 
+During my undergraduate study, I majored in Math & Applied Math. 
 After graduating from <a href="http://www.zju.edu.cn/">Zhejiang University</a> in June 2015, 
 I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a> System Group.
 My primary work at <a href="http://msra.cn/zh-cn/">MSRA</a> was to research computer game video compression method based on APIs.
