--- a/about.html
+++ b/about.html
@@ -18,10 +18,11 @@ This summer, I will be an engineer intern at <a href="https://www.snapchat.com/"
 </p>
 </div>
 
-<h4 style="font-family: Times New Roman;" align="justify">Skills</h4>
-<span class="badge">C/C++</span>
-<span class="badge">Python</span>
-<span class="badge">Java</span>
-<span class="badge">Matlab</span>
-<span class="badge">DirectX</span>
-<span class="badge">Latex</span>
+<h4 style="font-family: Georgia, serif;" align="justify">Skills</h4>
+<div class="tags">
+<a class="tag" style="border-color: black; color: black;">C/C++</a>
+<a class="tag" style="border-color: black; color: black;">Python</a>
+<a class="tag" style="border-color: black; color: black;">Matlab</a>
+<a class="tag" style="border-color: black; color: black;">DirectX</a>
+<a class="tag" style="border-color: black; color: black;">Latex</a>
+</div>
