--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@ This summer, I will be an engineer intern at <a href="https://www.snapchat.com/"
 <a class="tag" style="border-color: black; color: black;">C/C++</a>
 <a class="tag" style="border-color: black; color: black;">Python</a>
 <a class="tag" style="border-color: black; color: black;">Matlab</a>
+<a class="tag" style="border-color: black; color: black;">Java</a>
 <a class="tag" style="border-color: black; color: black;">DirectX</a>
 <a class="tag" style="border-color: black; color: black;">Latex</a>
 </div>
