--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "Hey. Are you there?"
+description: "Hey. Where are you?"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
