--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@ During my undergraduate study, I majored in Math & Applied Math.
 After graduating from <a href="http://www.zju.edu.cn/">Zhejiang University</a> in June 2015, 
 I spent 3 months as a research intern at <a href="http://msra.cn/zh-cn/">Microsoft Research Asia</a> System Group.
 My primary work at MSRA was to research computer game video compression method based on APIs.
-Currently, I am a graduate student at <a href="http://ucsd.edu/">UCSanDiego</a> major in Computer Science, machine learning track.
-This summer, I will be an engineer intern at <a href="https://www.snapchat.com/">Snapchat</a>. I expect to graduate in December 2016.
+I obtained my Master degree from <a href="http://ucsd.edu/">UCSanDiego</a> in December 2016. I majored in Computer Science, machine learning track at UCSanDiego.
+I was an engineer intern at <a href="https://www.snapchat.com/">Snapchat</a> in 2016. And now, I am a software engineer at Snapchat. 
 </p>
 </div>
 
